Fix spacing issue on first item of global nav

--- a/common/app/assets/stylesheets/module/nav/_new-navigation.scss
+++ b/common/app/assets/stylesheets/module/nav/_new-navigation.scss
@@ -372,9 +372,6 @@ $c-new-navigation-signposting-action: guss-colour(neutral-1) !default;
     &.new-navigation--has-no-local-navigation {
         .global-navigation {
             border-left: 0;
-            @include rem((
-                margin-left: -$gs-gutter
-            ));
         }
         .global-navigation__section:first-child {
             @include rem((
